# scree_ocr_learning

./: CMakeLists.txt  README.md  permission_test.txt
src/: detector.h  main.cpp  screen_capture_gdi.cpp  screen_capture_gdi.h
